[WebDriver] Support proper WTF logging features https://bugs.webkit.org/show_bug.cgi?id=284824
Reviewed by Adrian Perez de Castro.

Add the required pumbling to enable WTF LogChannels for
Source/WebDriver. This will allow us add more logging points without
polluting stdout/stderr.

Initially, it'll have 3 channels: WebDriverClassic, WebDriverBiDi,
SessionHost.

* Source/WebDriver/CMakeLists.txt:
* Source/WebDriver/LogInitialization.cpp: Added.
(WebDriver::logChannels):
(WebDriver::getLogChannel):
* Source/WebDriver/LogInitialization.h: Added.
* Source/WebDriver/Logging.cpp: Added.
* Source/WebDriver/Logging.h: Added.
* Source/WebDriver/PlatformGTK.cmake:
* Source/WebDriver/PlatformPlayStation.cmake:
* Source/WebDriver/PlatformWPE.cmake:
* Source/WebDriver/WebDriverMain.cpp:
(main):
* Source/WebDriver/WebDriverService.cpp:
(WebDriver::WebDriverService::run):
(WebDriver::WebDriverService::acceptHandshake):
(WebDriver::WebDriverService::handleMessage):
(WebDriver::WebDriverService::createSession):
* Source/WebDriver/soup/HTTPServerSoup.cpp:
(WebDriver::HTTPServer::listen):
* Source/WebDriver/soup/WebSocketServerSoup.cpp:
(WebDriver::handleIncomingHandshake):
(WebDriver::handleWebSocketMessage):
(WebDriver::WebSocketServer::listen):
* Source/WebDriver/unix/LoggingUnix.cpp: Added.
(WebDriver::logLevelString):
* Source/WebDriver/win/LoggingWin.cpp: Added.
(WebDriver::logLevelString):
* Source/WebKit/glib/environment-variables.md.in:

Canonical link: https://commits.webkit.org/288150@main

--- a/Source/WebDriver/CMakeLists.txt
+++ b/Source/WebDriver/CMakeLists.txt
@@ -9,6 +9,8 @@ set(WebDriver_PRIVATE_INCLUDE_DIRECTORIES
 set(WebDriver_SOURCES
     CommandResult.cpp
     HTTPServer.cpp
+    LogInitialization.cpp
+    Logging.cpp
     Session.cpp
     SessionHost.cpp
     WebDriverMain.cpp
