--- a/Source/WebKit/glib/environment-variables.md.in
+++ b/Source/WebKit/glib/environment-variables.md.in
@@ -5,7 +5,22 @@ Slug: environment-variables
 
 WebKit uses several environment variables, most of which are designed for developers or debugging purposes. These variables should be used carefully, as they can impact the behavior of the software. These environment variables and their behavior are not guaranteed to remain stable across versions of WebKit. Always ensure that your WebKit version corresponds to the documentation you are referencing to avoid compatibility issues.
 
+## Debugging Variables
+
+- `WEBKIT_DEBUG`
+Defines a comma-separated list of logging channels and their levels for WebKit's debugging output. Logging channels correspond to specific areas of functionality, such as networking, storage, and scrolling. For detailed usage, refer to [WebKit's Logging Guide](https://docs.webkit.org/Build%20%26%20Debug/Logging.html).
+    - **Enabling a channel**: Specify the channel's name with an optional level (e.g., `Loading=warning` outputs warnings and errors for the Loading channel).
+    - **Disabling a channel**: Prefix the name with a minus sign (`-`) (e.g., `all,-Network` enables all channels, except Network).
+    - **Enabling all channels**: Use the wildcard `"all"` as the content of `WEBKIT_DEBUG`.
+    - **Child processes**: The same configuration is shared to child processes spawned by the browser, like the `WebProcess` and `NetworkProcess`.
+    - **WebDriver-related channels**: In addition to the browser, the WebDriver service executable also uses WebKit's logging infrastructure, defining the following channels:
+        - `WebDriverClassic` - For the HTTP-based [WebDriver](https://w3c.github.io/webdriver/) Classic prototol.
+        - `WebDriverBiDi` - For the WebSockets-based [WebDriver BiDi](https://github.com/w3c/webdriver-bidi) protocol.
+        - `SessionHost` - For messages related to the management of the Browser under automation.
+
 #if WPE
+
+## Graphics-related variables
 
 - `WPE_DRM_DEVICE`
 Specifies the primary device that WebKit will use for gpu buffer allocation when it needs access to the main device. It is interesting for DRM backend. You need to specify a file path.
