[JSC] Suppress Safer CPP Checking report for JSC::VM https://bugs.webkit.org/show_bug.cgi?id=285050 rdar://141847850
Reviewed by Geoffrey Garen.

Safer CPP Checking cannot understand the lifetime modeling of JSC::VM:
JSC::VM is retained before entering JSC world, and inside JSC world, it
should be seen as always alive. Appropriate checking requires threading
lifetime information from the entrance of the JSC world, and it is not
done. As a result, the checker is reporting errors which is against how
JSC works.

This patch integrates a workaround class ThreadSafeRefCountedWithSuppressingSaferCPPChecking,
which uses refSuppressingSaferCPPChecking / derefSuppressingSaferCPPChecking instead of ref / deref,
so that it suppresses the checkers since checker uses ref / deref function names.
The implementation is copy of ThreadSafeRefCounted right now. But once
checker supports suppression mechanism, we will use it instead. Or once
checker understands how JSC::VM's lifetime management works, we do not
need suppression.

* Source/JavaScriptCore/API/JSContextRef.cpp:
(JSContextGroupRetain):
(JSContextGroupRelease):
(JSGlobalContextRetain):
(JSGlobalContextRelease):
* Source/JavaScriptCore/jsc.cpp:
(runJSC):
* Source/JavaScriptCore/runtime/VM.h:
(WTF::DefaultRefDerefTraits<JSC::VM>::refIfNotNull):
(WTF::DefaultRefDerefTraits<JSC::VM>::ref):
(WTF::DefaultRefDerefTraits<JSC::VM>::derefIfNotNull):
* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/ThreadSafeRefCountedWithSuppressingSaferCPPChecking.h: Added.
(WTF::ThreadSafeRefCountedWithSuppressingSaferCPPCheckingBase::refSuppressingSaferCPPChecking const):
(WTF::ThreadSafeRefCountedWithSuppressingSaferCPPCheckingBase::hasOneRef const):
(WTF::ThreadSafeRefCountedWithSuppressingSaferCPPCheckingBase::refCount const):
(WTF::ThreadSafeRefCountedWithSuppressingSaferCPPCheckingBase::derefBaseWithoutDeletionCheck const):
(WTF::ThreadSafeRefCountedWithSuppressingSaferCPPCheckingBase::derefBase co

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -322,6 +322,7 @@ set(WTF_PUBLIC_HEADERS
     ThreadMessage.h
     ThreadSafetyAnalysis.h
     ThreadSafeRefCounted.h
+    ThreadSafeRefCountedWithSuppressingSaferCPPChecking.h
     ThreadSafeWeakHashSet.h
     ThreadSafeWeakPtr.h
     ThreadSanitizerSupport.h
