Introduce a CompactVariant for efficient variants of pointers and types smaller than 56 bits https://bugs.webkit.org/show_bug.cgi?id=285099
Reviewed by Darin Adler.

Adds `WTF::CompactVariant`.

A `WTF::CompactVariant` acts like a `std::variant` with the following differences:
- All alternatives must be pointers, smart pointers, have size of 56 bits or fewer,
  or be specialized for `CompactVariantTraits`.
- It can only contain 254 or fewer alternatives.
- Has a more limited API, only offering `holds_alternative()` for type checking and
  `switchOn()` for value access.

Factors out a few share helpers from VariantList into a VariantExtras.h file.

* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/CompactVariant.h: Added.
* Source/WTF/wtf/CompactVariantOperations.h: Added.
* Source/WTF/wtf/VariantExtras.h: Added.
* Source/WTF/wtf/VariantList.h:
* Source/WTF/wtf/VariantListOperations.h:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WTF/CompactVariant.cpp: Added.
* Tools/TestWebKitAPI/Tests/WTF/LifecycleLogger.h:

Canonical link: https://commits.webkit.org/288271@main

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -47,6 +47,8 @@ set(WTF_PUBLIC_HEADERS
     CompactRefPtr.h
     CompactRefPtrTuple.h
     CompactUniquePtrTuple.h
+    CompactVariant.h
+    CompactVariantOperations.h
     CompilationThread.h
     Compiler.h
     CompletionHandler.h
@@ -352,6 +354,7 @@ set(WTF_PUBLIC_HEADERS
     UniqueRefVector.h
     VMTags.h
     ValueCheck.h
+    VariantExtras.h
     VariantList.h
     VariantListOperations.h
     Vector.h
