Reduce use of std::span::subspan() by leveraging ParsingUtilities https://bugs.webkit.org/show_bug.cgi?id=285271
Reviewed by Darin Adler.

A lot more code can be ported but this is a step in this direction.

* Source/JavaScriptCore/API/JSScript.mm:
(-[JSScript readCache]):
* Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp:
(JSC::CallArguments::CallArguments):
* Source/JavaScriptCore/runtime/CachedTypes.cpp:
(JSC::Encoder::release):
* Source/JavaScriptCore/runtime/IntlLocale.cpp:
(JSC::LocaleIDBuilder::overrideLanguageScriptRegion):
* Source/JavaScriptCore/runtime/IntlObject.cpp:
(JSC::canonicalizeUnicodeExtensionsAfterICULocaleCanonicalization):
* Source/JavaScriptCore/runtime/JSGenericTypedArrayViewConstructor.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* Source/JavaScriptCore/runtime/JSGenericTypedArrayViewPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* Source/JavaScriptCore/runtime/JSGlobalObjectFunctions.cpp:
(JSC::jsBinaryIntegerLiteral):
(JSC::jsOctalIntegerLiteral):
(JSC::jsHexIntegerLiteral):
(JSC::toDouble):
(JSC::parseFloat):
* Source/JavaScriptCore/runtime/JSONObject.cpp:
(JSC::bufferMode>::append):
* Source/JavaScriptCore/runtime/JSStringJoiner.cpp:
(JSC::appendStringToDataWithOneCharacterSeparatorRepeatedly):
* Source/JavaScriptCore/runtime/ParseInt.h:
(JSC::isStrWhiteSpace):
* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/DateMath.cpp:
(WTF::parseES5DatePortion):
(WTF::parseES5TimePortion):
(WTF::parseDate):
* Source/WTF/wtf/text/ParsingUtilities.h: Renamed from Source/WebCore/html/parser/ParsingUtilities.h.
(WTF::isNotASCIISpace):
(WTF::skipExactly):
(WTF::characterPredicate):
(WTF::skipUntil):
(WTF::skipWhile):
(WTF::skipExactlyIgnoringASCIICase):
(WTF::skipLettersExactlyIgnoringASCIICase):
(WTF::skipCharactersExactly):
(WTF::consumeSingleElement):
(WTF::consumeSpan):
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/bindings/js/SerializedScriptValue.cpp:
(WebCore::CloneDeserializer::re

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -449,6 +449,7 @@ set(WTF_PUBLIC_HEADERS
     text/MakeString.h
     text/NullTextBreakIterator.h
     text/OrdinalNumber.h
+    text/ParsingUtilities.h
     text/StringBuffer.h
     text/StringBuilder.h
     text/StringBuilderInternals.h
