Change the CSS shape() function status to stable https://bugs.webkit.org/show_bug.cgi?id=285303 rdar://142276582
Reviewed by Tim Nguyen.

The CSS shape function [1] syntax is pretty much stable now.

There's one open resolution [2] which we may still have to make changes for, but we still have
some time to respond.

[1] https://drafts.csswg.org/css-shapes-2/#shape-function
[2] https://github.com/w3c/csswg-drafts/issues/10666

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/288378@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -1552,17 +1552,17 @@ CSSScrollbarWidthEnabled:
 
 CSSShapeFunctionEnabled:
   type: bool
-  status: preview
+  status: stable
   category: css
   humanReadableName: "CSS shape() function"
   humanReadableDescription: "Enable the CSS shape() function"
   defaultValue:
     WebKitLegacy:
-      default: false
+      default: true
     WebKit:
-      default: false
+      default: true
     WebCore:
-      default: false
+      default: true
 
 CSSStartingStyleAtRuleEnabled:
   type: bool
