Web content process gets killed when loading apartments.com https://bugs.webkit.org/show_bug.cgi?id=285046 rdar://141734000
Reviewed by Ben Nham.

Web content process gets killed for sending `NotificationManagerMessageHandler` messages and failing message check (that
`NetworkProcess::builtInNotificationsEnabled()` must return true) in `NetworkConnectionToWebProcess::dispatchMessage()`.
The reason `NetworkProcess::builtInNotificationsEnabled()` returns false is UI process does not send correct value to
network process. In current implementation, UI process sets `NetworkProcess::builtInNotificationsEnabled()` only on
network process initialization (see `NetworkProcessProxy::sendCreationParametersToNewProcess`). The value in parameters
is decided based on `DeprecatedGlobalSettings::builtInNotificationsEnabled()` in UI process (see
`NetworkProcessProxy::sendCreationParametersToNewProcess`). `DeprecatedGlobalSettings::builtInNotificationsEnabled()` is
updated when `builtInNotificationsEnabled` preferences value is changed (see `WebPreferences::updateBoolValueForKey`).
However, if the default preferences value is true, `WebPreferences::updateBoolValueForKey()` is not invoked, so the
settings value will stay false. This means settings value (which network process uses) does not match preferences value
(which web content process uses).

Given that network process also tracks preferences in `NetworkConnectionToWebProcess::m_sharedPreferencesForWebProcess`,
we could just use that for message check, and this will fix the crash (as web process and network process have the same
`builtInNotificationsEnabled` value).

Regarding the problem that settings value does not match preferences value in UI process, this patch just replaces the
usage of settings value with preferences value. Instead of maintaining a global settings value and updating it when some
preferences object in UI process has change, we just compute a shared value based on all preferences (see
`WebsiteDataStore::buil

--- a/Source/WebKit/NetworkProcess/NetworkProcess.messages.in
+++ b/Source/WebKit/NetworkProcess/NetworkProcess.messages.in
@@ -234,7 +234,7 @@ messages -> NetworkProcess : AuxiliaryProcess WantsAsyncDispatchMessage {
 
     GetPendingPushMessage(PAL::SessionID sessionID) -> (std::optional<WebKit::WebPushMessage> message)
     GetPendingPushMessages(PAL::SessionID sessionID) -> (Vector<WebKit::WebPushMessage> messages)
-    ProcessPushMessage(PAL::SessionID sessionID, struct WebKit::WebPushMessage pushMessage, enum:uint8_t WebCore::PushPermissionState pushPermissionState) -> (bool didSucceed, std::optional<WebCore::NotificationPayload> displayPayload)
+    ProcessPushMessage(PAL::SessionID sessionID, struct WebKit::WebPushMessage pushMessage, enum:uint8_t WebCore::PushPermissionState pushPermissionState, bool builtInNotificationsEnabled) -> (bool didSucceed, std::optional<WebCore::NotificationPayload> displayPayload)
     ProcessNotificationEvent(struct WebCore::NotificationData data, enum:bool WebCore::NotificationEventType eventType) -> (bool didSucceed)
 
     GetAllBackgroundFetchIdentifiers(PAL::SessionID sessionID) -> (Vector<String> fetches);
