[UnifiedPDF] Make UnifiedPDFEnabled a defaults-overridable preference https://bugs.webkit.org/show_bug.cgi?id=285332 rdar://142306597
Reviewed by Aditya Keerthi.

This patch enables overriding the default value of UnifiedPDFEnabled
with a platform user default, which is helpful to see UnifiedPDF behavior
in non-Safari clients, among other things.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/288416@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7743,6 +7743,7 @@ UnifiedPDFEnabled:
   type: bool
   status: Unifiedpdf_feature_status
   category: security
+  defaultsOverridable: true
   humanReadableName: "Unified PDF Viewer"
   humanReadableDescription: "Enable Unified PDF Viewer"
   condition: ENABLE(UNIFIED_PDF)
