Regression(288156@main): http/tests/security/contentSecurityPolicy/connect-src-star-websocket-allowed.html is flakily crashing https://bugs.webkit.org/show_bug.cgi?id=285348 rdar://142320806
Reviewed by Charlie Wolfe.

According to crash log on bots, network process kills web process for sending NetworkSocketChannel message when
WebSocketEnabled is false. However, WebSocketEnabled should always be true during test run, so there could be other
issues in implementation. To avoid slowing down bots during investigation, revert 288156@main. Also, to investigate the
root cause, add debug assertion and loggings to help understand how WebSocketEnabled becomes false.

* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::m_ipcTester):
(WebKit::NetworkConnectionToWebProcess::dispatchMessage):
* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.messages.in:
* Source/WebKit/NetworkProcess/NetworkSocketChannel.cpp:
(WebKit::NetworkSocketChannel::sharedPreferencesForWebProcess): Deleted.
* Source/WebKit/NetworkProcess/NetworkSocketChannel.h:
* Source/WebKit/NetworkProcess/NetworkSocketChannel.messages.in:

Canonical link: https://commits.webkit.org/288420@main

--- a/Source/WebKit/NetworkProcess/NetworkSocketChannel.messages.in
+++ b/Source/WebKit/NetworkProcess/NetworkSocketChannel.messages.in
@@ -21,9 +21,9 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 [
+    ExceptionForEnabledBy,
     DispatchedFrom=WebContent,
-    DispatchedTo=Networking,
-    EnabledBy=WebSocketEnabled
+    DispatchedTo=Networking
 ]
 messages -> NetworkSocketChannel {
     SendString(std::span<const uint8_t> message) -> ()
