Enable sideways writing modes on stable https://bugs.webkit.org/show_bug.cgi?id=285354 rdar://142326673
Reviewed by Alan Baradlay.

Enables support for `writing-mode: sideways-lr` and `writing-mode: sideways-rl` from CSS Writing Modes Level 4:
  https://www.w3.org/TR/css-writing-modes-4/

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/288422@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7126,17 +7126,17 @@ ShrinksStandaloneImagesToFit:
 
 SidewaysWritingModesEnabled:
   type: bool
-  status: testable
+  status: stable
   category: css
   humanReadableName: "Sideways writing modes"
   humanReadableDescription: "Enable support for sideways writing modes"
   defaultValue:
     WebKitLegacy:
-      default: false
+      default: true
     WebKit:
-      default: false
+      default: true
     WebCore:
-      default: false
+      default: true
 
 SiteIsolationEnabled:
   type: bool
