[GTK] Create WebKitWebExtensionMatchPattern https://webkit.org/b/284216
Reviewed by Michael Catanzaro, Timothy Hatcher, and Adrian Perez de Castro.

This creates a GLib API of WebExtensionMatchPattern, which will then be used
by GLib APIs for WebExtensionContext and WebExtension itself.

* Source/WebKit/PlatformGTK.cmake:
* Source/WebKit/SourcesGTK.txt:
* Source/WebKit/UIProcess/API/glib/WebKitError.cpp:
(webkit_web_extension_error_quark):
* Source/WebKit/UIProcess/API/glib/WebKitError.h.in:
* Source/WebKit/UIProcess/API/glib/WebKitPrivate.cpp:
(toWebKitWebExtensionError):
* Source/WebKit/UIProcess/API/glib/WebKitPrivate.h:
* Source/WebKit/UIProcess/API/glib/WebKitWebExtensionMatchPattern.cpp: Added.
(_WebKitWebExtensionMatchPattern::_WebKitWebExtensionMatchPattern):
(webkit_web_extension_match_pattern_register_custom_url_scheme):
(webkitWebExtensionMatchPatternCreate):
(webkit_web_extension_match_pattern_ref):
(webkit_web_extension_match_pattern_unref):
(webkit_web_extension_match_pattern_new_all_urls):
(webkit_web_extension_match_pattern_new_all_hosts_and_schemes):
(webkit_web_extension_match_pattern_new_with_string):
(webkit_web_extension_match_pattern_new_with_scheme):
(webkit_web_extension_match_pattern_get_string):
(webkit_web_extension_match_pattern_get_scheme):
(webkit_web_extension_match_pattern_get_host):
(webkit_web_extension_match_pattern_get_path):
(webkit_web_extension_match_pattern_get_matches_all_urls):
(webkit_web_extension_match_pattern_get_matches_all_hosts):
(toImpl):
(webkit_web_extension_match_pattern_matches_url):
(webkit_web_extension_match_pattern_matches_pattern):
* Source/WebKit/UIProcess/API/glib/WebKitWebExtensionMatchPattern.h.in: Added.
* Source/WebKit/UIProcess/API/glib/WebKitWebExtensionMatchPatternPrivate.h: Added.
* Source/WebKit/UIProcess/API/glib/webkit.h.in:
* Tools/TestWebKitAPI/Tests/WebKitGLib/TestWebKitWebExtensionMatchPattern.cpp: Added.
(toPattern):
(testPatternValidity):
(testMatchesPattern):
(testMatchesURL):
(testMatche

--- a/Source/WebKit/UIProcess/API/glib/WebKitError.h.in
+++ b/Source/WebKit/UIProcess/API/glib/WebKitError.h.in
@@ -27,22 +27,23 @@
 
 G_BEGIN_DECLS
 
-#define WEBKIT_NETWORK_ERROR             webkit_network_error_quark ()
-#define WEBKIT_POLICY_ERROR              webkit_policy_error_quark ()
+#define WEBKIT_NETWORK_ERROR                     webkit_network_error_quark ()
+#define WEBKIT_POLICY_ERROR                      webkit_policy_error_quark ()
 #if !ENABLE(2022_GLIB_API)
-#define WEBKIT_PLUGIN_ERROR              webkit_plugin_error_quark ()
+#define WEBKIT_PLUGIN_ERROR                      webkit_plugin_error_quark ()
 #endif
-#define WEBKIT_DOWNLOAD_ERROR            webkit_download_error_quark ()
-#define WEBKIT_JAVASCRIPT_ERROR          webkit_javascript_error_quark ()
-#define WEBKIT_SNAPSHOT_ERROR            webkit_snapshot_error_quark ()
-#define WEBKIT_USER_CONTENT_FILTER_ERROR webkit_user_content_filter_error_quark ()
+#define WEBKIT_DOWNLOAD_ERROR                    webkit_download_error_quark ()
+#define WEBKIT_JAVASCRIPT_ERROR                  webkit_javascript_error_quark ()
+#define WEBKIT_SNAPSHOT_ERROR                    webkit_snapshot_error_quark ()
+#define WEBKIT_USER_CONTENT_FILTER_ERROR         webkit_user_content_filter_error_quark ()
+#define WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR webkit_web_extension_error_quark ()
 
 #if PLATFORM(GTK)
-#define WEBKIT_PRINT_ERROR               webkit_print_error_quark ()
+#define WEBKIT_PRINT_ERROR                       webkit_print_error_quark ()
 #endif
 
 #if ENABLE(2022_GLIB_API)
-#define WEBKIT_MEDIA_ERROR               webkit_media_error_quark ()
+#define WEBKIT_MEDIA_ERROR                       webkit_media_error_quark ()
 #endif
 
 /**
@@ -158,6 +159,22 @@ typedef enum {
 } WebKitSnapshotError;
 
 /**
+ * WebKitWebExtensionMatchPatternError:
+ * @WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR_UNKNOWN: An unknown error occured.
+ * @WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR_INVALID_SCHEME: The scheme component was invalid.
+ * @WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR_INVALID_HOST: The host component was invalid.
+ * @WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR_INVALID_PATH: The path component was invalid.
+ *
+ * Enum values used to denote errors happening when creating a #WebKitWebExtensionMatchPattern
+ */
+typedef enum {
+    WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR_UNKNOWN = 899,
+    WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR_INVALID_SCHEME = 808,
+    WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR_INVALID_HOST = 809,
+    WEBKIT_WEB_EXTENSION_MATCH_PATTERN_ERROR_INVALID_PATH = 810,
+} WebKitWebExtensionMatchPatternError;
+
+/**
  * WebKitUserContentFilterError:
  * @WEBKIT_USER_CONTENT_FILTER_ERROR_INVALID_SOURCE: The JSON source for a content filter is invalid.
  * @WEBKIT_USER_CONTENT_FILTER_ERROR_NOT_FOUND: The requested content filter could not be found.
@@ -186,36 +203,39 @@ typedef enum {
 #endif
 
 WEBKIT_API GQuark
-webkit_network_error_quark             (void);
+webkit_network_error_quark                     (void);
 
 WEBKIT_API GQuark
-webkit_policy_error_quark              (void);
+webkit_policy_error_quark                      (void);
 
 #if !ENABLE(2022_GLIB_API)
 WEBKIT_API GQuark
-webkit_plugin_error_quark              (void);
+webkit_plugin_error_quark                      (void);
 #endif
 
 WEBKIT_API GQuark
-webkit_download_error_quark            (void);
+webkit_download_error_quark                    (void);
 
 #if PLATFORM(GTK)
 WEBKIT_API GQuark
-webkit_print_error_quark               (void);
+webkit_print_error_quark                       (void);
 #endif
 
 WEBKIT_API GQuark
-webkit_javascript_error_quark          (void);
+webkit_javascript_error_quark                  (void);
 
 WEBKIT_API GQuark
-webkit_snapshot_error_quark            (void);
+webkit_snapshot_error_quark                    (void);
 
 WEBKIT_API GQuark
-webkit_user_content_filter_error_quark (void);
+webkit_web_extension_match_pattern_error_quark (void);
+
+WEBKIT_API GQuark
+webkit_user_content_filter_error_quark         (void);
 
 #if ENABLE(2022_GLIB_API)
 WEBKIT_API GQuark
-webkit_media_error_quark               (void);
+webkit_media_error_quark                       (void);
 #endif
 
 G_END_DECLS
