--- a/Tools/TestWebKitAPI/CMakeLists.txt
+++ b/Tools/TestWebKitAPI/CMakeLists.txt
@@ -217,6 +217,7 @@ if (ENABLE_WEBCORE)
         Tests/WebCore/PathTests.cpp
         Tests/WebCore/PublicSuffix.cpp
         Tests/WebCore/RenderStyleChange.cpp
+        Tests/WebCore/ResourceMonitor.cpp
         Tests/WebCore/SecurityOrigin.cpp
         Tests/WebCore/SharedBuffer.cpp
         Tests/WebCore/SharedBufferTest.cpp
